--- a/First_Raytracer/First_Raytracer.vcxproj
+++ b/First_Raytracer/First_Raytracer.vcxproj
@@ -174,6 +174,8 @@
     <ClInclude Include="Configuration\src\ConfigList.h" />
     <ClInclude Include="Configuration\src\UserInput.h" />
     <ClInclude Include="include\catch.hpp" />
+    <ClInclude Include="Utils\Vec3.h" />
+    <ClInclude Include="Utils\Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Configuration\src\ConfigList.cpp" />
@@ -192,6 +194,8 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Utils\src\Vec3.cpp" />
+    <ClCompile Include="Utils\test\Vec3Tests.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
