--- a/First_Raytracer/First_Raytracer.vcxproj
+++ b/First_Raytracer/First_Raytracer.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="Configuration\src\UserInput.h" />
     <ClInclude Include="include\catch.hpp" />
     <ClInclude Include="Utils\Vec3.h" />
+    <ClInclude Include="Utils\Vec4.h" />
     <ClInclude Include="Utils\Vector.h" />
   </ItemGroup>
   <ItemGroup>
@@ -195,7 +196,9 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Utils\src\Vec3.cpp" />
+    <ClCompile Include="Utils\src\Vec4.cpp" />
     <ClCompile Include="Utils\test\Vec3Tests.cpp" />
+    <ClCompile Include="Utils\test\Vec4Tests.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
