--- a/First_Raytracer/First_Raytracer.vcxproj
+++ b/First_Raytracer/First_Raytracer.vcxproj
@@ -174,6 +174,8 @@
     <ClInclude Include="Configuration\src\ConfigList.h" />
     <ClInclude Include="Configuration\src\UserInput.h" />
     <ClInclude Include="include\catch.hpp" />
+    <ClInclude Include="Utils\Mat3.h" />
+    <ClInclude Include="Utils\Matrix.h" />
     <ClInclude Include="Utils\Operations.h" />
     <ClInclude Include="Utils\Vec3.h" />
     <ClInclude Include="Utils\Vec4.h" />
@@ -196,9 +198,11 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Utils\src\Mat3.cpp" />
     <ClCompile Include="Utils\src\Operations.cpp" />
     <ClCompile Include="Utils\src\Vec3.cpp" />
     <ClCompile Include="Utils\src\Vec4.cpp" />
+    <ClCompile Include="Utils\test\Mat3Tests.cpp" />
     <ClCompile Include="Utils\test\OperationsTests.cpp" />
     <ClCompile Include="Utils\test\Vec3Tests.cpp" />
     <ClCompile Include="Utils\test\Vec4Tests.cpp" />
