--- a/First_Raytracer/First_Raytracer.vcxproj.filters
+++ b/First_Raytracer/First_Raytracer.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Utils\Matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Utils\Mat4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -81,6 +84,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Utils\src\Mat3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils\src\Mat4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils\test\Mat4Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
