--- a/First_Raytracer/First_Raytracer.vcxproj
+++ b/First_Raytracer/First_Raytracer.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="Configuration\src\ConfigList.h" />
     <ClInclude Include="Configuration\src\UserInput.h" />
     <ClInclude Include="include\catch.hpp" />
+    <ClInclude Include="Transformations\Transformations.h" />
     <ClInclude Include="Utils\Mat3.h" />
     <ClInclude Include="Utils\Mat4.h" />
     <ClInclude Include="Utils\Matrix.h" />
@@ -199,6 +200,8 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Transformations\src\Transformations.cpp" />
+    <ClCompile Include="Transformations\test\TransformationsTests.cpp" />
     <ClCompile Include="Utils\src\Mat3.cpp" />
     <ClCompile Include="Utils\src\Mat4.cpp" />
     <ClCompile Include="Utils\src\Operations.cpp" />
