--- a/First_Raytracer/First_Raytracer.vcxproj
+++ b/First_Raytracer/First_Raytracer.vcxproj
@@ -174,6 +174,9 @@
     <ClInclude Include="Camera\Camera.h" />
     <ClInclude Include="Configuration\src\ConfigList.h" />
     <ClInclude Include="Configuration\src\UserInput.h" />
+    <ClInclude Include="Geometry\Shape.h" />
+    <ClInclude Include="Geometry\Sphere.h" />
+    <ClInclude Include="Geometry\Triangle.h" />
     <ClInclude Include="include\catch.hpp" />
     <ClInclude Include="Light\DirectionalLight.h" />
     <ClInclude Include="Light\Light.h" />
@@ -185,6 +188,8 @@
     <ClInclude Include="ReadFile\src\InstructionList.h" />
     <ClInclude Include="Sampler\Sampler.h" />
     <ClInclude Include="Sampler\src\Sample.h" />
+    <ClInclude Include="Scene\Scene.h" />
+    <ClInclude Include="Screen\Screen.h" />
     <ClInclude Include="Transformations\Transformations.h" />
     <ClInclude Include="Utils\ColorTriad.h" />
     <ClInclude Include="Utils\Mat3.h" />
@@ -204,18 +209,25 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Testing|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Geometry\src\Shape.cpp" />
+    <ClCompile Include="Geometry\src\Sphere.cpp" />
+    <ClCompile Include="Geometry\src\Triangle.cpp" />
     <ClCompile Include="Light\src\Attenuation.cpp" />
     <ClCompile Include="Light\src\DirectionalLight.cpp" />
+    <ClCompile Include="Light\src\Light.cpp" />
     <ClCompile Include="Light\src\PointLight.cpp" />
     <ClCompile Include="main.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Testing|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Raytracer\src\RayCapable.cpp" />
     <ClCompile Include="Ray\src\Ray.cpp" />
     <ClCompile Include="ReadFile\src\InstructionList.cpp" />
     <ClCompile Include="ReadFile\src\ReadFile.cpp" />
     <ClCompile Include="Sampler\src\Sample.cpp" />
     <ClCompile Include="Sampler\src\Sampler.cpp" />
+    <ClCompile Include="Scene\src\Scene.cpp" />
+    <ClCompile Include="Screen\src\Screen.cpp" />
     <ClCompile Include="testInit.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Testing|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
