--- a/First_Raytracer/First_Raytracer.vcxproj
+++ b/First_Raytracer/First_Raytracer.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="Light\Light.h" />
     <ClInclude Include="Light\PointLight.h" />
     <ClInclude Include="Light\src\Attenuation.h" />
+    <ClInclude Include="MaterialProps\MaterialProps.h" />
     <ClInclude Include="Raytracer\RayCapable.h" />
     <ClInclude Include="Ray\Ray.h" />
     <ClInclude Include="ReadFile\ReadFile.h" />
@@ -220,6 +221,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Testing|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="MaterialProps\src\MaterialProps.cpp" />
     <ClCompile Include="Raytracer\src\RayCapable.cpp" />
     <ClCompile Include="Ray\src\Ray.cpp" />
     <ClCompile Include="ReadFile\src\InstructionList.cpp" />
