--- a/First_Raytracer/First_Raytracer.vcxproj.filters
+++ b/First_Raytracer/First_Raytracer.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="Types\ShapePtr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -227,5 +230,10 @@
     <ClCompile Include="Raytracer\src\Raytracer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="scenes\foo.test">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
